More integration tests for BookController and AuthorController.